[package]
name = "rpcap"
version = "0.4.0"
authors = ["Malte Kraus <git@maltekraus.de>"]
repository = "https://github.com/maltek/rpcap"
documentation = "https://docs.rs/rpcap/"
license = "MIT/Apache-2.0"
description="An all-Rust library for reading and writing PCAP files."
exclude = [
    "*.pcap*",
    ".gitignore",
    ".travis.yml",
]
readme = "README.md"
categories = [
    "network-programming",
]
keywords = [
    "packet",
    "pcap",
    "sniffing",
]

[dependencies]
bytepack = "0.4.1"

[dev-dependencies]
rand = "0.3.16"

[badges]
travis-ci = { repository = "maltek/rpcap", branch = "master" }
