[package]
name = "rpcap-fuzz"
version = "0.0.1"
authors = ["Malte Kraus"]
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rpcap = { path = ".." }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[features]
time = ["rpcap/time"]

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
